add team section

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -66,6 +66,7 @@
         "scss/blocks/header.scss",
         "scss/blocks/hello.scss",
         "scss/blocks/best.scss",
+        "scss/blocks/team.scss",
         "scss/blocks/feedback.scss",
         "scss/blocks/footer.scss",
         "scss/blocks/aside-pagination.scss"
