style menu section

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -67,6 +67,7 @@
         "scss/blocks/hello.scss",
         "scss/blocks/best.scss",
         "scss/blocks/team.scss",
+        "scss/blocks/menu.scss",
         "scss/blocks/feedback.scss",
         "scss/blocks/footer.scss",
         "scss/blocks/aside-pagination.scss"
