add and style order and map

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -70,7 +70,9 @@
         "scss/blocks/menu.scss",
         "scss/blocks/feedback.scss",
         "scss/blocks/footer.scss",
-        "scss/blocks/aside-pagination.scss"
+        "scss/blocks/aside-pagination.scss",
+        "scss/blocks/order.scss",
+        "scss/blocks/map.scss"
       ]
     }
   ],
