--- a/prepros-6.config
+++ b/prepros-6.config
@@ -69,10 +69,10 @@
         "scss/blocks/team.scss",
         "scss/blocks/menu.scss",
         "scss/blocks/feedback.scss",
-        "scss/blocks/footer.scss",
         "scss/blocks/aside-pagination.scss",
         "scss/blocks/order.scss",
-        "scss/blocks/map.scss"
+        "scss/blocks/map.scss",
+        "scss/blocks/footer.scss"
       ]
     }
   ],
