--- a/prepros-6.config
+++ b/prepros-6.config
@@ -72,7 +72,9 @@
         "scss/blocks/order.scss",
         "scss/blocks/map.scss",
         "scss/blocks/footer.scss",
-        "scss/blocks/aside-pagination.scss"
+        "scss/blocks/aside-pagination.scss",
+        "scss/blocks/hamburger-menu.scss",
+        "scss/blocks/burgers.scss"
       ]
     }
   ],
