--- a/prepros-6.config
+++ b/prepros-6.config
@@ -73,7 +73,8 @@
         "scss/blocks/footer.scss",
         "scss/blocks/aside-pagination.scss",
         "scss/blocks/hamburger-menu.scss",
-        "scss/blocks/burgers.scss"
+        "scss/blocks/burgers.scss",
+        "scss/blocks/overlay.scss"
       ]
     }
   ],
